--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ install:
     - conda update --quiet conda
     # Install a couple of dependencies we need for sure.
     - conda install --quiet --yes astropy conda-build conda-server jinja2 cython
-    - conda config --add channels astropy sunpy
+    - conda config --add channels astropy --add channels sunpy
     # Install obvious-ci; run 2to3 first if the build is python 3.
     - cd Obvious-CI; if [[ ${CONDA_PY::1} == 3 ]]; then 2to3 -w .; fi; python setup.py install; cd ..
 
