bsddb is unix only

--- a/recipe_templates/sunpy/meta.yaml
+++ b/recipe_templates/sunpy/meta.yaml
@@ -31,7 +31,7 @@ requirements:
     - sqlalchemy
     - beautiful-soup
     - requests
-    - bsddb
+    - bsddb               [unix]
     - pytest
     - scikit-image
 
