--- a/appveyor.yml
+++ b/appveyor.yml
@@ -40,7 +40,7 @@ build: off
 
 test_script:
     - "%CMD_IN_ENV% python affiliate-builder\\prepare_packages.py requirements.txt"
-    - if exist recipes %CMD_IN_ENV% python %CONDA_INSTALL_LOCN%\Scripts\obvci_conda_build_dir.py recipes astropy
+    - if exist recipes %CMD_IN_ENV% python %CONDA_INSTALL_LOCN%\Scripts\obvci_conda_build_dir.py recipes sunpy
     - if exist bdist_conda %CMD_IN_ENV% build_bdist.bat
 
 on_success:
