--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ install:
     - conda update --quiet conda
     # Install a couple of dependencies we need for sure.
     - conda install --quiet --yes astropy conda-build anaconda-client jinja2 cython
-    - conda config --add channels sunpy
+    - conda config --add channels sunpy --add channels astropy
     # Install obvious-ci; run 2to3 first if the build is python 3.
     - cd Obvious-CI; if [[ ${CONDA_PY::1} == 3 ]]; then 2to3 -w .; fi; python setup.py install; cd ..
 
