--- a/.travis.yml
+++ b/.travis.yml
@@ -1,44 +1,20 @@
-# The language in this case has no bearing - we are going to be making use of "conda" for a
-# python distribution for the scientific python stack.
-language: c
-
-sudo: false
+language: python
 
 os:
   - linux
-  - osx
+
+sudo: false
 
 env:
-    global:
-        - TARGET_ARCH="x64"
-        - CONDA_INSTALL_LOCN="${HOME}/conda"
-        # Defines BINSTAR_TOKEN for astropy binstar channel
-        - secure: TZ13pJm5S6/sv5VOSV75CaaiPqv4HJjcVAOEpKWxW3Gysh3+QSLV3n1vu4IIumEIWQN5MVg5zlLarUM5jmfmqPBGgIjA+7XqPPj4S4cFuPzNS4WJlDHynIMiTw4HcxsrJyALM+0o5hhkEeHwrOZCohwch1VRbCxs/WXfI4qrtyQ=
-    matrix:
-        - CONDA_PY=27
-          CONDA_NPY=19
+  global:
+    - CONDA_DEPENDENCIES='anaconda-client'
+    # Defines BINSTAR_TOKEN for astropy binstar channel
+    - secure: TZ13pJm5S6/sv5VOSV75CaaiPqv4HJjcVAOEpKWxW3Gysh3+QSLV3n1vu4IIumEIWQN5MVg5zlLarUM5jmfmqPBGgIjA+7XqPPj4S4cFuPzNS4WJlDHynIMiTw4HcxsrJyALM+0o5hhkEeHwrOZCohwch1VRb$
 
 install:
-    # Install miniconda, always the version specified by CONDA_PY, because
-    # bdist_conda does not properly build python 3 packages in a python 2
-    # base installation. See https://github.com/conda/conda-build/issues/132
-    - python ./Obvious-CI/bootstrap-obvious-ci-and-miniconda.py ${CONDA_INSTALL_LOCN} ${TARGET_ARCH} ${CONDA_PY::1} --without-obvci
-    - export PATH=${CONDA_INSTALL_LOCN}/bin:$PATH
-    - conda config --set always_yes true
-    - conda update --quiet conda
-    # Install a couple of dependencies we need for sure.
-    - conda install --quiet --yes astropy conda-build anaconda-client jinja2 cython
-    - conda config --add channels sunpy --add channels astropy
-    # Install obvious-ci; run 2to3 first if the build is python 3.
-    - cd Obvious-CI; if [[ ${CONDA_PY::1} == 3 ]]; then 2to3 -w .; fi; python setup.py install; cd ..
+  - git clone git://github.com/astropy/ci-helpers.git
+  - source ci-helpers/travis/setup_conda.sh
 
 script:
-    # Get ready to build.
-    - python affiliate-builder/prepare_packages.py requirements.txt
-    - if [[ -d recipes ]]; then obvci_conda_build_dir.py recipes sunpy; fi
-    # Build bdist_conda-based packages
-    - if [[ -d bdist_conda ]]; then bash build_bdist.sh; fi
-
-after_success:
-    # Upload to binstar...this should probably be done as the bdists are built.
-    - python affiliate-builder/upload_bdists.py
+  - ./sync.sh
+sudo: false
